fixed 4 and 5 by deleting classpath in dynamiccompiler.java